# frontier_explorer

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  package.xml
docs/html/: BFS_8cpp.html  BFS_8cpp__incl.map  BFS_8cpp__incl.md5  BFS_8cpp_source.html  BFS_8hpp.html  BFS_8hpp__dep__incl.map  BFS_8hpp__dep__incl.md5  BFS_8hpp__incl.map  BFS_8hpp__incl.md5  BFS_8hpp_source.html  annotated.html  annotated_dup.js  classBFS-members.html  classBFS.html  classBFS.js  classBFS_a569f5936b7d708e928f6477548ffcdd2_cgraph.map  classBFS_a569f5936b7d708e928f6477548ffcdd2_cgraph.md5  classes.html  classexplore-members.html  classexplore.html  classexplore.js  classexplore_a1e21ba2b5ae23bed33de7856e1418b64_cgraph.map  classexplore_a1e21ba2b5ae23bed33de7856e1418b64_cgraph.md5  classexplore_a402fe39518e7024b1f49cd000c1620ed_cgraph.map  classexplore_a402fe39518e7024b1f49cd000c1620ed_cgraph.md5  classexplore_a668d5b972220ff43b4680beb1e889dd4_cgraph.map  classexplore_a668d5b972220ff43b4680beb1e889dd4_cgraph.md5  classexplore_ab529fa2c030a29a5ac687b26b61b0663_cgraph.map  classexplore_ab529fa2c030a29a5ac687b26b61b0663_cgraph.md5  classmap-members.html  classmap.html  classmap.js  classmap_acaa7a0726870c1d08c75b3f84caa298b_cgraph.map  (+118 more)
include/: BFS.hpp  explore.hpp  map.hpp  sensor.hpp
launch/: frontier_explorer.launch
results/: cppcheckResults  cpplintResult  radiationMap.ppm
src/: BFS.cpp  explore.cpp  main.cpp  map.cpp  sensor.cpp
test/: frontierExplorerTest.launch  main.cpp  testBFS.cpp  testExplore.cpp  testMapGen.cpp  testSensor.cpp
world/: plant.sdf
(+107 files in other folders)
